--- a/scheduler/tasks/stats-reporter-task/src/main/resources/application.yml
+++ b/scheduler/tasks/stats-reporter-task/src/main/resources/application.yml
@@ -5,4 +5,9 @@ spring:
       uri: # The database connection URI
 
 app:
-  outputPath: # Path where the stats report file should be placed
+  outputPath: # Path where the stats report files should be generated
+  publishPath: # Path where the stats report files should be published
+  ssh:
+    user: # ssh user
+    key: # ssh key path
+    server:  # ssh sever to submit jobs from
