--- a/scheduler/tasks/submission-migrator-task/src/main/resources/application.yml
+++ b/scheduler/tasks/submission-migrator-task/src/main/resources/application.yml
@@ -5,6 +5,9 @@ spring:
       uri: # The database connection URI
 app:
   concurrency: # Number of submissions processed concurrently
+  delay: # Number of seconds of delay between each migration request
+  await: # Number of minutes to wait for a migration request to be completed
+  accNoPattern: # Accession pattern to find the submissions to migrate
   bioStudies:
     url: # BioStudies backend URL
     user: # BioStudies manager user
