Pivotal ID # 184977702: Assign DOIs Automatically (#736)
https://www.pivotaltracker.com/story/show/184977702

- Validate the required DOI fields
- Perform the request to register the DOI for the submission

--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -116,3 +116,8 @@ app:
   notifications:
     requestQueue: submission-request-submitter-queue # queue used to handle request stages
     requestRoutingKey: bio.submission.requested # request messages routing key
+  doi:
+    endpoint: # DOI registration endpoint
+    uiUrl: # The BioStudies UI URL which will be associated to the DOI record
+    user: # User for the DOI service
+    password: # Password for the DOI service
