--- a/submission/submission-webapp/src/main/resources/application-local.yml
+++ b/submission/submission-webapp/src/main/resources/application-local.yml
@@ -56,3 +56,8 @@ app:
     requireActivation: false
   persistence:
     concurrency: 5
+  doi:
+    endpoint: https://test-endpoint.org
+    uiUrl: https://www.biostudies.ac.uk
+    user: a-user
+    password: a-password
