--- a/settings.gradle
+++ b/settings.gradle
@@ -28,7 +28,7 @@ include("events:events-publisher")
 include("bio-admin")
 include("infrastructure")
 
-include("submission:submitter")
+include("submission:submission-core")
 include("submission:submission-webapp")
 include("submission:submission-security")
 include("submission:file-sources")
