--- a/scheduler/tasks/stats-reporter-task/src/main/resources/application.yml
+++ b/scheduler/tasks/stats-reporter-task/src/main/resources/application.yml
@@ -5,4 +5,4 @@ spring:
       uri: # The database connection URI
 
 app:
-  outputPath: # Path where the stats report file should be placed
+  publishPath: # Path where the stats report files should be published
