--- a/submission/submission-webapp/src/itest/resources/application.yml
+++ b/submission/submission-webapp/src/itest/resources/application.yml
@@ -17,6 +17,10 @@ spring:
       max-file-size: 10240MB
       max-request-size: 10240MB
 
+  mvc:
+    async:
+      request-timeout: -1
+
   rabbitmq:
     username: guest
     password: guest
