Pivotal ID # 186322997:  S-BIAD877 could not be loaded (#762)
https://www.pivotaltracker.com/story/show/186322997
- refactor to use async flow rather than blocking sequence

--- a/submission/submission-webapp/src/itest/resources/application.yml
+++ b/submission/submission-webapp/src/itest/resources/application.yml
@@ -11,10 +11,15 @@ spring:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
       use-new-id-generator-mappings: false
 
+
   servlet:
     multipart:
       max-file-size: 10240MB
       max-request-size: 10240MB
+
+  mvc:
+    async:
+      request-timeout: -1
 
   rabbitmq:
     username: guest
