Pivotal ID # 186180872: Submission Migrator Task
- Use non-blocking operations
- Keep the previous modification date for migrate/transfer operations
- Fix deployment commands

--- a/ci/submitter.yml
+++ b/ci/submitter.yml
@@ -16,7 +16,7 @@
 .deploy-migrator-submitter:
   dependencies:
     - build-test
-  script: gradle :submission:submission-webapp:bootJar deploySubmitter -Penv=prod -PdeployPath=$APPS_PATH/submitter/prod -PjvmParams=-Xmx16g
+  script: gradle :submission:submission-webapp:bootJar deployMigratorSubmitter -Penv=prod -PdeployPath=$APPS_PATH/submitter/migrator -PjvmParams=-Xmx8g
 
 .deploy-sandbox-submitter:
   dependencies:
