--- a/settings.gradle
+++ b/settings.gradle
@@ -48,3 +48,4 @@ include("scheduler:tasks:exporter-task")
 include("scheduler:tasks:pmc-processor-task")
 include("scheduler:tasks:stats-reporter-task")
 include("scheduler:tasks:submission-releaser-task")
+include("scheduler:tasks:submission-migrator-task")
