--- a/settings.gradle
+++ b/settings.gradle
@@ -28,18 +28,18 @@ include("events:events-publisher")
 include("bio-admin")
 include("infrastructure")
 
-include("submission:submission-core")
-include("submission:submission-webapp")
 include("submission:submission-security")
 include("submission:file-sources")
 include("submission:notifications")
 include("submission:submission-handlers")
 include("submission:submission-config")
-
 include("submission:persistence-common-api")
 include("submission:persistence-filesystem")
 include("submission:persistence-sql")
 include("submission:persistence-mongo")
+include("submission:submission-core")
+include("submission:submission-webapp")
+include("submission:submission-task")
 
 include("scheduler:scheduler")
 include("scheduler:common:cluster-client")
@@ -49,3 +49,4 @@ include("scheduler:tasks:pmc-processor-task")
 include("scheduler:tasks:stats-reporter-task")
 include("scheduler:tasks:submission-releaser-task")
 include("scheduler:tasks:submission-migrator-task")
+
