--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -111,6 +111,10 @@ app:
       ftpPassword: # the ftp password
       ftpUrl: # the ftp url without port
       ftpPort: # the ftp port
+    ssh:
+      user: # ssh user
+      key: # ssh key path.
+      server:  ## ssh sever (to submit jobs from)
   persistence:
     enableFire: true
     concurrency: # Number of files processed concurrently
