Pivotal ID # 186080414: Execute Submission Persistence On DMs
- Include the cluster properties into the task properties
- Include the logs path as part of the job object
- Instantiate the health check endpoint only when the task mode is set to true

--- a/scheduler/scheduler/src/main/resources/application.yml
+++ b/scheduler/scheduler/src/main/resources/application.yml
@@ -12,9 +12,11 @@ app:
     exporter: # Indicates whether the Exporter should be daily triggered
     statsReporter: # Indicates whether the Stats Reporter task should be triggered
 
-  ssh:
-    sshKey: # ssh key path.
-    sshServer:  ## ssh sever (to submit jobs from)
+  cluster:
+    user: # cluster ssh user
+    sshKey: # cluster ssh key path.
+    sshServer:  # cluster sever (to submit jobs from)
+    logsPath: # path to place the logs of the dispatched jobs
 
 pmc:
   import:
