Pivotal ID # 186080414: Execute Submission Persistence On DMs
Create cluster-client package

--- a/settings.gradle
+++ b/settings.gradle
@@ -21,6 +21,7 @@ include("commons:commons-model-extended-test")
 include("client:bio-webclient")
 include("client:bio-webclient-demo")
 include("client:bio-commandline")
+include("client:cluster-client")
 include("client:fire-webclient")
 include("client:ftp-webclient")
 
