--- a/submission/submission-webapp/src/itest/resources/application_base.yml
+++ b/submission/submission-webapp/src/itest/resources/application_base.yml
@@ -27,7 +27,7 @@ spring:
     port: 5672
 
 app:
-  instanceId: Biostudies-Itest
+  processId: Biostudies-Itest
   retrySubmission: false
   submissionPath:
   ftpPath:
