Pivotal ID # 186080414: Execute Submission Persistence On DMs (#773)
https://www.pivotaltracker.com/story/show/186080414

- Cluster health check resource
- Include the cluster properties into the task properties
- Include `logsPath` as part of the job object
- Instantiate the health check endpoint only when the task mode is set
to true

--- a/settings.gradle
+++ b/settings.gradle
@@ -21,6 +21,7 @@ include("commons:commons-model-extended-test")
 include("client:bio-webclient")
 include("client:bio-webclient-demo")
 include("client:bio-commandline")
+include("client:cluster-client")
 include("client:fire-webclient")
 include("client:ftp-webclient")
 
@@ -42,7 +43,6 @@ include("submission:submission-webapp")
 include("submission:submission-task")
 
 include("scheduler:scheduler")
-include("scheduler:common:cluster-client")
 include("scheduler:common:task-properties")
 include("scheduler:tasks:exporter-task")
 include("scheduler:tasks:pmc-processor-task")
