--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -61,6 +61,7 @@ logging:
     org.springframework.data.mongodb.core.convert.QueryMapper: ERROR # Disable to avoid mapping log population.
 
 app:
+  processId: BioStudies-Backend
   retrySubmission: false
   enablePropertiesLog: true
   consumers: 10 # number of processing queue consumers.
