Pivotal ID # 186080414: Execute Submission Persistence On DMs
- Remove size calculation from the ExtFile mapping
- Add new stage to generate the page tab files
- Fix cluster execution
- Deploy submission task

--- a/deploy.gradle
+++ b/deploy.gradle
@@ -141,6 +141,15 @@ task updateStatsReporterArtifact {
     finalizedBy "deployArtifact"
 }
 
+task updateSubmissionTaskArtifact {
+    doFirst {
+        project.ext.artifactPath = "submission/submission-task/build/libs"
+        project.ext.artifactName = "submission-task-1.0.0.jar"
+    }
+
+    finalizedBy "deployArtifact"
+}
+
 task deployArtifact {
     doLast {
         ssh.run {
