--- a/ci/stats-reporter.yml
+++ b/ci/stats-reporter.yml
@@ -15,14 +15,14 @@ deploy-dev-stats-reporter-task:
   when: manual
   dependencies:
     - build-test
-  script: gradle :scheduler:tasks:submission-stats-reporter-task:bootJar updateStatsReporterArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/dev/apps
+  script: gradle :scheduler:tasks:stats-reporter-task:bootJar updateStatsReporterArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/dev/apps
 
 deploy-beta-stats-reporter-task:
   stage: deploy-beta-stats-reporter-task
   when: manual
   dependencies:
     - build-test
-  script: gradle :scheduler:tasks:submission-stats-reporter-task:bootJar updateStatsReporterArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/beta/apps
+  script: gradle :scheduler:tasks:stats-reporter-task:bootJar updateStatsReporterArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/beta/apps
 
 deploy-prod-stats-reporter-task:
   extends: .deploy-prod-stats-reporter-task
