--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -112,12 +112,13 @@ app:
     filesProperties:
       defaultMode: # The default mode to create user folder. Valid values are: NFS, FTP
       filesDirPath: # Absolute path to the folder to be used for the user/groups files
-      magicDirPath: #  Absolute path to create user magic folder for dropbox simple access
-      ftpDirPath: #  Absolute path of users FTP. Used to access file
-      ftpUser: # the ftp user
-      ftpPassword: # the ftp password
-      ftpUrl: # the ftp url without port
-      ftpPort: # the ftp port
+      magicDirPath: # Absolute path to create user magic folder for dropbox simple access
+      ftpDirPath: # Absolute path of the FTP-IN folder in NFS
+      ftpRootPath: # Root path to find the user files in the FTP-IN folder. If blank, root level FTP-IN will be used
+      ftpUser: # FTP user
+      ftpPassword: # FTP password
+      ftpUrl: # FTP url without port
+      ftpPort: # FTP port
   persistence:
     enableFire: # Boolean flag to indicate whether the files are stored on FIRE if true or NFS if false
     concurrency: # Number of files processed concurrently
