--- a/submission/submission-handlers/src/main/resources/application.yml
+++ b/submission/submission-handlers/src/main/resources/application.yml
@@ -37,6 +37,7 @@ app:
     uiUrl: # The BioStudies UI url
     stUrl: # The BioStudies ST url
     slackUrl: # Slack notifications URL
+    # bccEmail: Nullable, optional email to include in every notification.
     rt:
       host: # RT server host
       queue: # Queue used for RT notifications
