Pivotal ID # 186992651: NFS Private Submissions Persistence
- Add properties for release mode and include secret key
- Implement adding secret key to the private path if the feature flag is enabled
- Implement the released based on the configured release mode
- Rename methods to emphasise private/public separation
- Improve delete empty directories to delete root folders
- Remove unused code

--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -118,6 +118,8 @@ app:
   persistence:
     enableFire: # Boolean flag to indicate whether the files are stored on FIRE if true or NFS if false
     concurrency: # Number of files processed concurrently
+    includeSecretKey: # Boolean flag to indicate whether the secret key should be added to the private submission path
+    nfsReleaseMode: # Method used to release files for NFS submissions. Valid values are: MOVE, HARD_LINKS
     privateSubmissionsPath: # Absolute path to the folder to be used as storage for private submissions
     publicSubmissionsPath: # Absolute path to the folder to be used as storage for public submissions
     requestFilesPath: # Absolute path to the folder where request files are stored
