--- a/docs/api/BioStudiesInternalAPI.yaml
+++ b/docs/api/BioStudiesInternalAPI.yaml
@@ -18,6 +18,7 @@ tags:
   - name: Extended Submissions
   - name: Refresh
   - name: Submissions
+  - name: Submission Requests
   - name: Submission Drafts
   - name: Submission Stats
   - name: FTP
@@ -83,6 +84,9 @@ paths:
     $ref: 'drafts/operations/GetDraftContent.yaml'
   /submissions/drafts/{key}/submit:
     $ref: 'drafts/operations/SubmitDraft.yaml'
+
+  /submissions/requests/{accNo}/{version}:
+    $ref: 'requests/operations/SubmissionRequests.yaml'
 
   /submissions/ftp/generate:
     $ref: 'ftp/GenerateFtpLinks.yaml'
