--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,7 +75,7 @@ stages:
 
 build-test:
   stage: build-test
-  script: gradle build test -x itest -x jacocoTestCoverageVerification buildArtifacts --info
+  script: gradle build test -x itest -x jacocoTestCoverageVerification buildArtifacts
 
 nfs-itest:
   needs: [ "build-test" ]
