--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,7 @@ stages:
   - auto-deploy-dev-bio-commandline
   - auto-deploy-beta-bio-commandline
   - auto-deploy-prod-bio-commandline
+  - auto-deploy-prod-submission-task
   - auto-deploy-dev-submitter
   - auto-deploy-beta-submitter
   - auto-deploy-prod-submitter
