--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ variables:
 
 include:
   - local: '/ci/submitter.yml'
+  - local: '/ci/submission-task.yml'
   - local: '/ci/pmc-processor.yml'
   - local: '/ci/exporter.yml'
   - local: '/ci/submission-releaser.yml'
@@ -18,6 +19,7 @@ include:
   - local: '/ci/submission-handlers.yml'
   - local: '/ci/docker.yml'
 
+
 stages:
   - build-test
   - nfs-itest
@@ -26,6 +28,10 @@ stages:
   - auto-deploy-dev-bio-commandline
   - auto-deploy-beta-bio-commandline
   - auto-deploy-prod-bio-commandline
+  - auto-deploy-prod-submission-task
+  - deploy-dev-submission-task
+  - deploy-beta-submission-task
+  - deploy-prod-submission-task
   - auto-deploy-dev-submitter
   - auto-deploy-beta-submitter
   - auto-deploy-prod-submitter
