Pivotal ID # 187611460: Fix Artifacts Deployment
Execute the buildArtifacts stage in a separate script line

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,7 +79,9 @@ stages:
 
 build-test:
   stage: build-test
-  script: gradle build test -x itest -x jacocoTestCoverageVerification buildArtifacts
+  script:
+    - gradle build test -x itest -x jacocoTestCoverageVerification
+    - gradle buildArtifacts
 
 nfs-itest:
   needs: [ "build-test" ]
